--- a/staticLayout.css
+++ b/staticLayout.css
@@ -1,68 +1,208 @@
 body{
-    background-image: url("https://images.ctfassets.net/usf1vwtuqyxm/62pELvCqUwOjj7KggdxEw4/efc70c33f3b6a271ee4e5ddd515c5d08/Crafts_HomepageHero__1_.jpg?w=2880&h=1740&fit=fill&fm=webp");
-    background-color: blue;
-    background-size: cover;
-    background-position: ;
-    background-repeat: no-repeat;
-    height: 100%;
-    margin: 0;
-    font-family: Sophia Pro,serif;
+    background: url("//images.ctfassets.net/usf1vwtuqyxm/wq7bQpHNLXdxajd2JZ5ON/adabf59972e39ada322a2862109fb28d/Patronus__1_.jpg?") no-repeat, url("blackSky.png") repeat-y;
+    background-size: 1400px, 2400px ;
+    margin-top: 0;
+    background-color: black;
+    font-family: "Poppins", serif;
     color: white; 
 }
-/* find font 
-*/
+
+a:link {
+    color: inherit;
+    text-decoration: none;
+}
+
+a:visited { 
+    color: inherit;
+    text-decoration: none;
+}
 
 .topNav {
-    background-color: black;
+    background-color: transparent;
     overflow: hidden;
-    height: 100px;
+    height: 80px;
+    width: auto;
+    box-shadow: 0px 13px 5px -15px white;
 }
+
 
 .topNav a {
-    float: center;
+    position: absolute;
     color: darkmagenta;
     text-align: center;
-    padding: 100px 100px;
+    top: 12px;
+    left: 375px;
 }
 
+.login { /*how to make it only appear on navbar hover*/
+    border:0;
+    border-radius: 3px;
+    background-color: #6b63b5;
+    color: white;
+    text-align:center;
+    text-decoration: none;
+    font-family: 'Poppins', sans-serif;
+    letter-spacing: 2;
+    font-size: 12px;
+    padding: 8px 18px;
+    cursor: pointer;
+    z-index: 9;
+    display: inline-block;
+    text-transform: uppercase;;
+    font-weight: 200;
+    letter-spacing: 1.5;
+    position: absolute;
+    left: 1190px;
+    margin-top: -50px;
+}
 
 .tablink {
-    background-color: black;
-    color: white;
-    float: center;
-    border: black;
+  background-color: transparent;
+  position: fixed;
+  top: 85px;
+  left: 0px;
+  height: 50px;
+  display: flex;
+  padding: 0 200px 0 100px;
+  align-items: center;
+  font-size: 14px;
+  font-family: 'Poppins', sans serif;
+  font-weight: 600;
+  letter-spacing: 2;
+ }
+ 
+ .tablink *{
+    display: inline;
+}
+
+.tablink li{
+    margin: 10px;
+}
+/*how do both at same time??*/
+.topNav:hover{
+    background-color: #242633;
+}
+.tablink:hover{
+    background-color: #10141b;
+    text-decoration: underline;
+}
+
+nav.scroll {
+    background-color: #10141b;
+}
+
+.dropdown{
+    float: left;
+    overflow: hidden;
+}
+
+.dropdown .dropbtn {
+    font-size: 14px;
+    border: none;
     outline: none;
-    cursor: pointer;
-    padding: 0px 0px;
-    font-size: 10px;
-    width: 10%;
+    color: #10141b;
+    padding: 100px 100px;
+    font-family: inherit;
+    margin: 0;
 }
 
-.tablink:hover {
-    background-color: #777;
-}
-
-.tabcontent {
+.expectoButton {
+    border:0;
+    border-radius: 50px;
+    background-color: #6b63b5;
     color: white;
-    display: none;
-    padding: 10px 20px;
-    height: 100%;
+    text-align:center;
+    text-decoration: none;
+    font-family: 'Poppins', san serif;
+    font-size: 14px;
+    text-decoration: bold;
+    top: 10px;
+    padding: 17px 52px;
+    cursor: pointer;
+    z-index: 9;
+    display: inline-block;
+    text-transform: uppercase;;
+    font-weight: 500;
+    letter-spacing: 1.5;
 }
-
-#NewsFeatures {background-color: black;}
-#Quizzes {background-color: black;}
-#JKRowling {background-color: black;}
-#Discover {background-color: black;}
-#StartingHarryPotter {background-color: black;}
-#HogwartsSorting {background-color: black;}
-#FanClub {background-color: black;}
-#Pins {background-color: black;}
-#Shops {background-color: black;}
 
 .fantasticHeader{
     position: absolute;
     top: 150px;
-    left: 350px;
+    left: 400px;
     float: center;
-    height: 1000px;
+    height: 300px;
+}
+
+.mainTitle{
+    position: absolute;
+    top: 250px;
+    margin-right: 300px;
+    margin-left: 300px;
+    text-align: center;
+    font-size: 32px; 
+    font-family: 'Montaga', serif !important;
+}
+
+.mainText{  
+    color: white;
+    font-size: 11pt;
+    padding: 0px 150px 0px 150px;
+    margin-top: -60px;
+    font-weight: 650;
+    border: solid 10px transparent;
+    font-family: "Open Sans", sans-serif;
+}
+
+.row{
+    margin-top: 659px;
+    display: flex;
+    padding-left: 90px;
+    padding-right: 40px;
+}
+
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.column {
+    width: 33%;
+    padding: 0 ;
+}
+
+@media screen and (max-width: 600px) {
+    .column {
+        width: 100%;
+        display: block;
+        margin-bottom: 20px;
+    }
+}
+
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    padding: 2px;
+    background-color: transparent;
+}
+
+.column h4 {
+    font-size: 8pt !important;
+    margin-top: -70px;
+    margin-left: 55px;
+    z-index: 2;
+}
+
+.column p {
+    font-size: 20pt;
+    font-weight: 700;
+    font-family: "Prata", serif;
+    z-index: 2;
+    letter-spacing: 1.5px;
+    margin-top: -1px;
+    margin-left: 55px;
+}
+
+.column a {
+    z-index: 1;
 }
